Bug 317794 - Crash when toggling checkbox in Bookmark Manager
Summary: Crash when toggling checkbox in Bookmark Manager
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.6 (KDE 4.11)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Thibaut Gridel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-03 18:44 UTC by Dennis Nienhüser
Modified: 2013-04-13 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Nienhüser 2013-04-03 18:44:49 UTC
The bookmark manager shows a checkbox for folders in the tree view (why?). Toggling the checkbox leads to a crash. Might be related to bug #316969. Backtrace:

ASSERT: "index.isValid()" in file /home/dennis/marble/src/src/lib/BookmarkManagerDialog.cpp, line 110

Program received signal SIGABRT, Aborted.
0xb7fdf1b2 in _dl_sysinfo_int80 () from /lib/ld-linux.so.2
(gdb) bt
#0  0xb7fdf1b2 in _dl_sysinfo_int80 () from /lib/ld-linux.so.2
#1  0xb5e981df in __GI_raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#2  0xb5e9b825 in __GI_abort () at abort.c:91
#3  0xb6d6d74c in qt_message_output(QtMsgType, char const*) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#4  0xb6d6db59 in ?? () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#5  0xb6d6dc78 in qFatal(char const*, ...) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#6  0xb6d6dd05 in qt_assert(char const*, char const*, int) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#7  0xb7cdede6 in Marble::BookmarkManagerDialogPrivate::handleFolderSelection (this=0x8e9e870, index=...)
    at /home/dennis/marble/src/src/lib/BookmarkManagerDialog.cpp:110
#8  0xb6ea3ef6 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/i386-linux-gnu/libQtCore.so.4
#9  0xb69175c5 in QAbstractItemView::clicked(QModelIndex const&) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#10 0xb6917a5f in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
#11 0xb6966b70 in QTreeView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/i386-linux-gnu/libQtGui.so.4
Comment 1 Thibaut Gridel 2013-04-13 16:58:19 UTC
Git commit e2ac9502747d9470be4b71a3a2281315adef1fa1 by Thibaut Gridel.
Committed on 13/04/2013 at 14:10.
Pushed by tgridel into branch 'master'.

Bookmarks: do not crash while changing visibility of folders

M  +3    -0    src/lib/BookmarkManagerDialog.cpp

http://commits.kde.org/marble/e2ac9502747d9470be4b71a3a2281315adef1fa1