Bookmarks: do not crash while changing visibility of folders

BUG: 317794